@@ -23,7 +23,7 @@ New Breed Software</p>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
 
-<p>May 14, 2007</p>
+<p>May 15, 2007</p>
 
 
 </center>
@@ -304,6 +304,13 @@ New Breed Software</p>
 
     <p>In some enviornments, the fancy cursors cause problems.
     Use this option to avoid them.</p>
+  </dd>
+  
+  <dt><code><b>hidecursor=yes</b></code></dt>
+  <dd>
+    <p>This completely hides the mouse pointer shapes in Tux&nbsp;Paint.</p>
+
+    <p>This is useful for touchscreen devices, such as tablet PCs.</p>
   </dd>
   
   <dt><code><b>nooutlines=yes</b></code></dt>
@@ -868,6 +875,7 @@ New Breed Software</p>
     --nowheelmouse<br>
     --nobuttondistinction<br>
     --nofancycursors<br>
+    --hidecursor<br>
     --nooutlines<br>
     --nostamps<br>
     --nostampcontrols<br>
@@ -902,6 +910,7 @@ New Breed Software</p>
     --wheelmouse<br>
     --buttondistinction<br>
     --fancycursors<br>
+    --showcursor<br>
     --outlines<br>
     --stamps<br>
     --stampcontrols<br>
